--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -243,7 +243,7 @@
                 <a routerLink="appraisal/head">Create Appraisal Head</a>
                 <a routerLink="appraisal/scale">Create Appraisal Scale</a>
                 <a routerLink="appraisal/template">Create Appraisal Template</a>
-                <a routerLink="appraisal/configuration">Appraisal Year Configuration</a>
+                <a routerLink="appraisal/year/configuration">Appraisal Year Configuration</a>
                 <a routerLink="appraisal/assign/employee">Assign Template to Employee</a>
                 <a routerLink="payroll/salary/generate">Appraisal</a>
                 <a routerLink="appraisal/appraisalList/requested">Requested Appraisal list</a>
