--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -247,6 +247,7 @@
                 <a routerLink="appraisal/assign/employee">Assign Template to Employee</a>
                 <a routerLink="payroll/salary/generate">Appraisal</a>
                 <a routerLink="appraisal/appraisalList/requested">Requested Appraisal list</a>
+                <a routerLink="appraisal/summery">Appraisal Summery</a>
                 <hr>
                 <a routerLink="#">Employee Wise Detail Report</a>
                 <a routerLink="#">Employee Static Report</a>
