--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -240,18 +240,17 @@
             <ul class="submenu">
               <li class="">
 <!--                <label>Test</label>-->
-                <a routerLink="appraisal/head">Create Appraisal Head</a>
-                <a routerLink="appraisal/scale">Create Appraisal Scale</a>
-                <a routerLink="appraisal/template">Create Appraisal Template</a>
-                <a routerLink="appraisal/year/configuration">Appraisal Year Configuration</a>
-                <a routerLink="appraisal/assign/employee">Assign Template to Employee</a>
-                <a routerLink="payroll/salary/generate">Appraisal</a>
+                <a  routerLink="appraisal/head">Create Appraisal Head</a>
+                <a  routerLink="appraisal/scale">Create Appraisal Scale</a>
+                <a  routerLink="appraisal/template">Create Appraisal Template</a>
+                <a  routerLink="appraisal/year/configuration">Appraisal Year Configuration</a>
+                <a  routerLink="appraisal/assign/employee">Assign Template to Employee</a>
                 <a routerLink="appraisal/appraisalList/requested">Requested Appraisal list</a>
                 <a routerLink="appraisal/summery">Appraisal Summery</a>
-                <hr>
-                <a routerLink="#">Employee Wise Detail Report</a>
-                <a routerLink="#">Employee Static Report</a>
-                <a routerLink="#">Appraisal Format Report</a>
+<!--                <hr>-->
+<!--                <a routerLink="#">Employee Wise Detail Report</a>-->
+<!--                <a routerLink="#">Employee Static Report</a>-->
+<!--                <a routerLink="#">Appraisal Format Report</a>-->
 
               </li>
             </ul>
